# multi-column-x

./: .gitattributes  .gitignore  .prettierignore  CALUDE.md  CLAUDE.md  README.md  REFACTORING_PLAN.md  eslint.config.js  icon-manifest.json  index.html  package-lock.json  package.json  tsconfig.inject.json  tsconfig.json  vite.config.ts  vite.inject.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: column-webview.json  default.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_bridge.rs  ipc_constants.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: account.rs  mod.rs  settings.rs  settings_store.rs  update.rs  webview.rs
src-tauri/src/commands/webview/: column.rs  compose.rs  mod.rs  popup.rs
src-tauri/src/inject/: area_remove.js  auto_reload.js  custom_css.js  header_customizer.js  image_popup.js  keyboard_shortcut.js  mod.rs  popup_toolbar.js  scroll_event.js  tab_selector.js
src-tauri/src/inject/_src/: HeaderCustomizer.module.scss  HeaderCustomizer.tsx  auto_reload.ts  blur_image.ts  constants.ts  context_menu.ts  custom_css.test.ts  custom_css.ts  headerCustomizerTypes.ts  header_customizer.ts  hide_ad.ts  image_popup.property.test.ts  image_popup.test.ts  image_popup.ts  keyboard_shortcut.test.ts  keyboard_shortcut.ts  mobile_area_hide.ts  mobile_tab_bar.ts  ng_word.test.ts  ng_word.ts  popup_toolbar.test.ts  popup_toolbar.ts  popup_video_autoplay.property.test.ts  popup_video_autoplay.test.ts  popup_video_autoplay.ts  scroll_event.ts  scroll_pos_restore.ts  sidebar_hide.ts  zoom.ts  (+8 more)
(+215 files in other folders)
